--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Bd by mediajockey</title>
+    <title>business-solutions</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Bd</h1>
-        <h2></h2>
-        <a href="https://github.com/mediajockey/bd" class="button"><small>View project on</small> GitHub</a>
+        <h1>MEDIAJOCKEY</h1>
+        <h2>7D Universal process management</h2>
+        <a href="https://mediajockeybd.wordpresslcom" class="button"><small>Handyman for technology</small> 7D-UPM</a>
       </div>
     </header>
 
