--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header>
       <div class="inner">
         <h1>MEDIAJOCKEY</h1>
-        <h2>7D Universal process management</h2>
-        <a href="https://mediajockeybd.wordpresslcom" class="button"><small>Handyman for technology</small> 7D-UPM</a>
+        <h2>Technology & Software</h2>
+        <a href="https://mediajockeybd.wordpress.com" class="button"><small>HANDYMAN</small>7D PM</a>
       </div>
     </header>
 
@@ -29,9 +29,9 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>7D PROCESS MANAGEMENT</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, ypa
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
