--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>MEDIAJOCKEY</h1>
         <h2>Technology & Software</h2>
-        <a href="https://mediajockeybd.wordpress.com" class="button"><small>HANDYMAN</small>7D PM</a>
+        <a href="https://mediajockeybd.wordpress.com" class="button"><small> 7D PM</small> HANDYMAN</a>
       </div>
     </header>
 
@@ -31,12 +31,11 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>7D PROCESS MANAGEMENT</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, ypa
+<p>7D (dimensional) Process Management, a total process management system based theroy of (7 Chakra's) complex human life process management.Committed to SIMPLICITY is the core strength of MEDIA JOCKEY. With the span of experience in outsourcing/support industry for businesses, gathered knowledge working with industry verticals like hotel and resort, telecommunications, IT and ITES, consumer products, banking, news and print media, advertising and marketing, textiles and garments, recruitment, real estate, health care, export import, education and renewable energy.
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technology & Software</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>With ever changing Trends & Customer behaviour across the business, its very difficult to sustain  became the business vertical is become very  competitive trends and </Committed to SIMPLICITY is the core strength of MEDIA JOCKEY, being p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
