--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>7D PROCESS MANAGEMENT</h3>
 
-<p>7D (dimensional) Process Management, a total process management system based theroy of (7 Chakra's) complex human life process management.Committed to SIMPLICITY is the core strength of MEDIA JOCKEY. With the span of experience in outsourcing/support industry for businesses, gathered knowledge working with industry verticals like hotel and resort, telecommunications, IT and ITES, consumer products, banking, news and print media, advertising and marketing, textiles and garments, recruitment, real estate, health care, export import, education and renewable energy.
+<p>7D (dimensional) Process Management, a total process management system based theroy of (7 Chakra's) complex human life process management.Committed to SIMPLICITY is the core strength of MEDIA JOCKEY. With the span of experience in outsourcing/support industry for businesses, gathered knowledge working with industry verticals like hotel and resort, telecommunications, IT and ITES, consumer products, banking, news and print media, advertising and marketing, textiles and garments, recruitment, real estate, health care, export import, education and renewable energy.</p>
 
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Technology & Software</h3>
 
-<p>With ever changing Trends & Customer behaviour across the business, its very difficult to sustain  became the business vertical is become very  competitive trends and </Committed to SIMPLICITY is the core strength of MEDIA JOCKEY, being p>
+<p>With ever changing Trends & Customer behaviour across the business, its very difficult to sustain  became the business vertical is become very  competitive and information with technology and sowtware its being MUST to ahead. We are being blessed with opportunities to develop, design, deploy and impkement during begning phase of information utilization using technology & Software and have had opportunity two work with renown application. Along with the growth of the businesses MEDIAJOCKEY was being always at per and now along when technology and science is driving towards bigdata, data science, AGI, AI, ASI Machine language and deep learning along with depth analytical approch we are simplifying the total system with redefine system stracture and clear indicators with seamless decision domain. </p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
