--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>business-solutions</title>
+    <title>Data application solutions</title>
   </head>
 
   <body>
@@ -35,12 +35,13 @@
 
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><h3>Technology and oftware</h3>
 
-<p>With ever changing Trends & Customer behaviour across the business, its very difficult to sustain  became the business vertical is become very  competitive and information with technology and sowtware its being MUST to ahead. We are being blessed with opportunities to develop, design, deploy and impkement during begning phase of information utilization using technology & Software and have had opportunity two work with renown application. Along with the growth of the businesses MEDIAJOCKEY was being always at per and now along when technology and science is driving towards bigdata, data science, AGI, AI, ASI Machine language and deep learning along with depth analytical approch we are simplifying the total system with redefine system stracture and clear indicators with seamless decision domain. </p>
+<p>With ever changing Trends & Customer behaviour across the business, its very difficult to sustain  became the business vertical is become very  competitive and information with technology and sowtware its being MUST to ahead. We are being blessed with opportunities to develop, design, deploy and impkement during begning phase of information utilization using technology & Software and have had opportunity two work with renown application. 
+Along with the growth of the businesses MEDIAJOCKEY was being always at per and now along when technology and science is driving towards bigdata, data science, AGI, AI, ASI Machine language and deep learning along with depth analytical approch we are simplifying the total system with redefine system stracture and clear indicators with seamless decision domain. </p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Consulting and RPO</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Telented human resourse is another important tool along with state of art business applications to sustain achieve seamless growth. We take you beyond borders and let you see what best is there for you. Our RECRUITMENT PROCESS OUTSOURCING SERVICE is just a quick match and fill for you as we have customised collaboration system with regular, parttime, contractual, hour basis to suit your needl</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
