--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Along with the growth of the businesses MEDIAJOCKEY was being always at per and 
             .
           </a>
 
-          <p>This page was designed by <a herf="https://plus.google.com">Abu Zafar</a> using the Architect theme by <a href="https://twitter.com/jasonlong">Mediajockey</a>.</p>
+          <p>This page was designed by <a herf="https://plus.google.com">Abu Zafar</a> using the Architect theme by <a href="https://twitter.com/mediajockey">Mediajockey</a>.</p>
         </aside>
       </div>
     </div>
